# velecs-common-cpp

./: .gitmodules  CMakeLists.txt  README.md
include/velecs/common/: BitfieldEnum.hpp  Context.hpp  Event.hpp  Exceptions.hpp  NameUuidRegistry.hpp  Paths.hpp  Uuid.hpp
libs/: CMakeLists.txt
src/: Paths.cpp  Uuid.cpp
